[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "research-brain"
version = "0.2.0"
description = "科研 Vibe Coding 知识库 — 让每一次失败都成为 AI 的免疫力"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "ResearchBrain Contributors"},
]
keywords = ["research", "knowledge-base", "experiment-tracking", "vibe-coding", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "pyyaml>=6.0",
    "click>=8.0",
]

[project.urls]
Homepage = "https://github.com/nb666-w/research-brain"
Repository = "https://github.com/nb666-w/research-brain"

[project.scripts]
rb = "research_brain.cli:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["research_brain*"]
